refactored out re-usable components for usage in other html files

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,1 +1,19 @@
-<h1>It works!</h1>
+{% include "header.html" %}
+<div class="uk-child-width-expand@s uk-text-center uk-padding" uk-grid>
+    <div>
+        <div class="uk-card uk-card-default uk-card-body">
+            <a target="_blank" href="/userapp">User App</a>
+        </div>
+    </div>
+    <div>
+        <div class="uk-card uk-card-default uk-card-body">
+            <a target="_blank" href="/driverapp">Driver App</a>
+        </div>
+    </div>
+    <div>
+        <div class="uk-card uk-card-default uk-card-body">
+            <a target="_blank" href="/dashboard">Dashboard</a>
+        </div>
+    </div>
+</div>
+{% include "footer.html" %}
